// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPreviewFooter /> should render a footer with comment and votes counters 1`] = `
<div
  className="card__counters card__counters_multiple"
>
  <div
    className="card__counter card__counter-comments"
  >
    <div
      className="card__counter__value"
    >
      3
    </div>
    <div>
      <FormattedMessage
        id="comment.count_no_nb"
        values={
          Object {
            "count": 3,
          }
        }
      />
    </div>
  </div>
  <div
    className="card__counter card__counter-votes"
  >
    <div
      className="card__counter__value"
    >
      1
    </div>
    <div>
      <FormattedMessage
        id="proposal.vote.count_no_nb"
        values={
          Object {
            "count": 1,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`<ProposalPreviewFooter /> should render a footer with comment counter 1`] = `
<div
  className="card__counters "
>
  <div
    className="card__counter card__counter-comments"
  >
    <div
      className="card__counter__value"
    >
      3
    </div>
    <div>
      <FormattedMessage
        id="comment.count_no_nb"
        values={
          Object {
            "count": 3,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`<ProposalPreviewFooter /> should render a footer without comment and votes counters 1`] = `null`;
